feat(STOCK-15) minor optimisation